---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: shader.debug()
---
[
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_mov_b32,
                ssrc0: LiteralConstant,
                sdst: VccHi,
            },
        ),
        literal_constant: Some(
            11,
        ),
        program_counter: 0,
    },
    Instruction {
        inner: SOP2(
            SOP2Instruction {
                op: s_lshl_b32,
                ssrc0: Destination(
                    ScalarGPR(
                        16,
                    ),
                ),
                ssrc1: IntegerConstant(
                    InlineIntegerConstant(
                        6,
                    ),
                ),
                sdst: ScalarGPR(
                    0,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 8,
    },
    Instruction {
        inner: VOP2(
            VOP2Instruction {
                op: v_add_co_u32,
                src0: Scalar(
                    Destination(
                        ScalarGPR(
                            0,
                        ),
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
                vdst: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        literal_constant: None,
        program_counter: 12,
    },
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_buffer_load_dwordx2,
                offset: 0,
                imm: true,
                sbase: 6,
                sdst: ScalarGPR(
                    0,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 16,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 127,
            },
        ),
        literal_constant: None,
        program_counter: 20,
    },
    Instruction {
        inner: VOPC(
            VOPCInstruction {
                op: v_cmp_gt_u32,
                src0: Scalar(
                    Destination(
                        ScalarGPR(
                            0,
                        ),
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        literal_constant: None,
        program_counter: 24,
    },
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_and_saveexec_b64,
                ssrc0: Destination(
                    VccLo,
                ),
                sdst: ScalarGPR(
                    2,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 28,
    },
    Instruction {
        inner: VOP2(
            VOP2Instruction {
                op: v_and_b32,
                src0: Scalar(
                    Destination(
                        ScalarGPR(
                            1,
                        ),
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
                vdst: VectorGPR {
                    register_idx: 1,
                },
            },
        ),
        literal_constant: None,
        program_counter: 32,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_cbranch_execz,
                simm16: 7,
            },
        ),
        literal_constant: None,
        program_counter: 36,
    },
    Instruction {
        inner: MUBUF(
            MUBUFInstruction {
                op: buffer_load_format_x,
                offset: Offset(
                    0,
                ),
                offen: false,
                idxen: true,
                glc: false,
                addr64: false,
                lds: false,
                vaddr: VectorGPR {
                    register_idx: 1,
                },
                vdata: VectorGPR {
                    register_idx: 1,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 1,
                },
                slc: false,
                tfe: false,
                soffset: 128,
            },
        ),
        literal_constant: None,
        program_counter: 40,
    },
    Instruction {
        inner: VOPC(
            VOPCInstruction {
                op: v_cmp_gt_u32,
                src0: Scalar(
                    Destination(
                        ScalarGPR(
                            10,
                        ),
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        literal_constant: None,
        program_counter: 48,
    },
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_and_saveexec_b64,
                ssrc0: Destination(
                    VccLo,
                ),
                sdst: ScalarGPR(
                    0,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 52,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 3952,
            },
        ),
        literal_constant: None,
        program_counter: 56,
    },
    Instruction {
        inner: MUBUF(
            MUBUFInstruction {
                op: buffer_store_format_x,
                offset: Offset(
                    0,
                ),
                offen: false,
                idxen: true,
                glc: false,
                addr64: false,
                lds: false,
                vaddr: VectorGPR {
                    register_idx: 0,
                },
                vdata: VectorGPR {
                    register_idx: 1,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 2,
                },
                slc: false,
                tfe: false,
                soffset: 128,
            },
        ),
        literal_constant: None,
        program_counter: 60,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_endpgm,
                simm16: 0,
            },
        ),
        literal_constant: None,
        program_counter: 68,
    },
]
